<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_head_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/TeaGreen">
        <ImageView
            android:id="@+id/haed_image_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_new_arrow"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:layout_centerInParent="true"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/haed_text_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accomplish"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textSize="25sp"/>
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/haed_image_title"
        android:layout_marginTop="60dp"
        android:layout_width="@dimen/height100"
        android:layout_height="@dimen/height100"
        android:src="@mipmap/user_icon_default"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选一张清晰的照片"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/haed_button_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button"
        android:text="@string/photograph"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:id="@+id/haed_button_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button"
        android:layout_marginTop="10dp"
        android:text="@string/uploading"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

</LinearLayout>
