<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_user_friend_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/TeaGreen">
        <ImageView
            android:id="@+id/userfriend_chat_image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/height10"/>
        <TextView
            android:id="@+id/userfriend_chat_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="昵称"
            android:layout_centerInParent="true"
            android:textColor="@color/White"
            android:textSize="22sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/height10"
            android:src="@drawable/image_delete"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/re_listview"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/screen_one"

        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                android:id="@+id/linear_dialogue"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/userfriend_chat_image_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ease_chatting_setmode_voice_btn_normal"
                    android:layout_marginLeft="@dimen/height10"
                    android:layout_gravity="center"/>

                <test.bwie.com.mychatprogectitem.custom.EditTextPreIme
                    android:id="@+id/userfriend_chat_ed_text"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyEditText"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/keyboard_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/height10"
                    android:layout_marginRight="@dimen/height10"
                    android:src="@drawable/ease_chatting_setmode_keyboard_btn_normal"/>
                <Button
                    android:id="@+id/button_seepx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="按住 说话"
                    android:background="@drawable/speak_button_select"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/userfriend_chat_image_face"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/height10"
                    android:layout_marginLeft="@dimen/height10"
                    android:src="@drawable/ease_chatting_biaoqing_btn_enable"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginRight="@dimen/height10"
                    android:src="@drawable/ease_chatting_setmode_keyboard_btn_normal"
                    android:layout_marginLeft="@dimen/height10"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/userfriend_chat_image_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ease_type_select_btn_nor"
                    android:layout_marginLeft="@dimen/height10"
                    android:layout_marginRight="@dimen/height10"/>
                <Button
                    android:id="@+id/userfriend_chat_text_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:background="@drawable/send_btn_default"
                    android:layout_marginRight="@dimen/height10"
                    android:text="发送"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/buttom_layout_view"
        android:background="@color/btn_answer_normal">
        <!-- 填充表情 -->
        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/emoji_ViewPager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->
        <!-- 填充加号 -->
        <!--<GridView-->
            <!--android:id="@+id/gridview"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"/>-->
        <!--- 写表情的布局-->
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/buttom_layout_plus"
        android:background="@color/btn_answer_normal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivAlbum"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_session_func_bg"
                android:src="@mipmap/ic_func_pic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album"
                android:textSize="12sp"
                android:layout_below="@+id/ivAlbum"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_video_call"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_session_func_bg"
                android:src="@mipmap/ic_func_shot"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_video_call"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.5dp"
                android:text="@string/shot"
                android:textSize="12sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_session_func_bg"
                android:src="@mipmap/ic_func_location"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivLocation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.5dp"
                android:text="@string/location"
                android:textSize="12sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/ivRedPack"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_session_func_bg"
                android:src="@mipmap/ic_func_red_pack"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivRedPack"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7.5dp"
                android:text="@string/red_pack"
                android:textSize="12sp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
